Configurando todo para el deploy

--- a/SeguridadApp/template/perfil.html
+++ b/SeguridadApp/template/perfil.html
@@ -73,11 +73,11 @@ Rafita
                     </div>
                   </div>
               </div>
-              <div class="row">
+              <!-- <div class="row">
                 {% for n in p %}
                 <p>{{n}}</p>
                 {% endfor %}
-              </div>
+              </div> -->
             </div>
           <!-- /page content -->
 {% endblock %}
