--- a/rafita/template/plantilla.html
+++ b/rafita/template/plantilla.html
@@ -24,6 +24,9 @@
     <!-- Custom Theme Style -->
     <link href="{% static '/build/css/custom.min.css' %}" rel="stylesheet">
 
+    <!-- Icon -->
+    <link rel="icon" href="{% static '/img/icon.png' %}" type="image/x-icon">
+
   </head>
 
   <body class="nav-md">
